# otir-project

./: .gitignore  CMakeLists.txt  README.md
otir/: CMakeLists.txt
otir/include/otir/Dialect/: OTIROps.td
otir/lib/Dialect/: OTIROps.cpp
otir/test/: CMakeLists.txt  lit.cfg.py
test/: lit.cfg.py
tools/: otir-opt.cpp
